[package]
name = "leiden"
version = "0.0.0"
edition = "2021"
license-file = "LICENSE"

[features]
dev = []
persistence = []
exit = []
rumble = []
sdl = ["sdl2"]

[dependencies]
bevy = { version = "0.14.1", features = ["wav", "mp3"] }
bevy-persistent = { version = "0.6.0", features = ["bincode"] }
bevy_prng = { version = "0.7.1", features = ["wyrand"] }
bevy_rand = { version = "0.7.1", features = ["wyrand"] }
bevy_ui = { version = "0.14.0" }
rand_core = "0.6.4"
wyrand = "0.2.1"
dirs = "5.0.1"
serde = "1.0.204"
bevy_window = "0.14.1"
log = "0.4.22"
sdl2 = { version = "0.37.0", features = ["static-link", "bundled", "use-bindgen"], optional = true }

[dev-dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking", "bevy_dev_tools"] }

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
